--- a/app/scss/_messages.scss
+++ b/app/scss/_messages.scss
@@ -123,11 +123,14 @@ $msg-color: #1f96fb;
 
 #inputPane {
   padding: .5em 12px;
+  background-color: #fff !important;
   width: 100%;
   bottom: 0;
   display: block;
   position: fixed !important;
+  border-top: 1px solid #ccc;
   transform: translateY(100%);
+  z-index: 1000;
 }
 
 .indicator span::before,
