--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2008,7 +2008,7 @@ HEADER
   display: block;
   position: fixed;
   top: 0;
-  z-index: 99;
+  z-index: 99999;
   text-align: center;
   width: 100%;
   background-color: transparent;
@@ -2023,8 +2023,9 @@ HEADER
 .header_container.fadeOut {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
+  z-index: 99;
 }
-/* line 177, ../scss/app.scss */
+/* line 178, ../scss/app.scss */
 .header_container h1 {
   color: #f5f6f7;
 }
@@ -2032,7 +2033,7 @@ HEADER
 /*======================================
 CHOOSE YOUR ACT
 ======================================*/
-/* line 186, ../scss/app.scss */
+/* line 187, ../scss/app.scss */
 video#cya_bgvid {
   position: fixed;
   top: 50%;
@@ -2048,7 +2049,7 @@ video#cya_bgvid {
   background-size: cover;
 }
 
-/* line 201, ../scss/app.scss */
+/* line 202, ../scss/app.scss */
 .intro_container {
   display: block;
   position: absolute;
@@ -2058,18 +2059,18 @@ video#cya_bgvid {
   padding: 0px 200px;
   z-index: 99;
 }
-/* line 210, ../scss/app.scss */
+/* line 211, ../scss/app.scss */
 .intro_container h1 {
   color: #f5f6f7;
 }
-/* line 214, ../scss/app.scss */
+/* line 215, ../scss/app.scss */
 .intro_container p {
   font-size: 30px;
   line-height: 38px;
   color: #f5f6f7;
 }
 
-/* line 221, ../scss/app.scss */
+/* line 222, ../scss/app.scss */
 .intros {
   position: fixed;
   top: 0;
@@ -2077,14 +2078,14 @@ video#cya_bgvid {
   display: block;
   height: 100%;
 }
-/* line 228, ../scss/app.scss */
+/* line 229, ../scss/app.scss */
 .intros .intro_left {
   width: 50%;
   left: 0;
   height: 100%;
   position: absolute;
 }
-/* line 234, ../scss/app.scss */
+/* line 235, ../scss/app.scss */
 .intros .intro_left:before {
   content: "";
   position: absolute;
@@ -2095,14 +2096,14 @@ video#cya_bgvid {
   height: 100%;
   display: block;
 }
-/* line 239, ../scss/app.scss */
+/* line 240, ../scss/app.scss */
 .intros .intro_right {
   width: 50%;
   right: 0;
   height: 100%;
   position: absolute;
 }
-/* line 245, ../scss/app.scss */
+/* line 246, ../scss/app.scss */
 .intros .intro_right:before {
   content: "";
   position: absolute;
@@ -2117,7 +2118,7 @@ video#cya_bgvid {
 /*======================================
 INTRO VIDEO
 ======================================*/
-/* line 255, ../scss/app.scss */
+/* line 256, ../scss/app.scss */
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -2132,12 +2133,12 @@ INTRO VIDEO
   transition: all 1s ease-in-out;
 }
 
-/* line 266, ../scss/app.scss */
+/* line 267, ../scss/app.scss */
 .fullscreen-bg.move_down_vid {
   bottom: -100%;
 }
 
-/* line 270, ../scss/app.scss */
+/* line 271, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2149,7 +2150,7 @@ INTRO VIDEO
 /*======================================
 CHOOSE YOUR STORY
 ======================================*/
-/* line 282, ../scss/app.scss */
+/* line 283, ../scss/app.scss */
 div#choose_your_story {
   position: absolute;
   display: block;
@@ -2161,17 +2162,17 @@ div#choose_your_story {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 290, ../scss/app.scss */
+/* line 291, ../scss/app.scss */
 div#choose_your_story.header_transform {
   height: 10%;
 }
 
-/* line 295, ../scss/app.scss */
+/* line 296, ../scss/app.scss */
 div#choose_your_story.move_down {
   transform: translateY(0%);
 }
 
-/* line 299, ../scss/app.scss */
+/* line 300, ../scss/app.scss */
 .cys_split_container {
   position: relative;
   overflow-x: hidden;
@@ -2179,7 +2180,7 @@ div#choose_your_story.move_down {
   width: 100%;
 }
 
-/* line 306, ../scss/app.scss */
+/* line 307, ../scss/app.scss */
 .cys_side {
   height: 100%;
   position: fixed;
@@ -2187,7 +2188,7 @@ div#choose_your_story.move_down {
   background-size: cover;
   background-position: 60% 0;
 }
-/* line 313, ../scss/app.scss */
+/* line 314, ../scss/app.scss */
 .cys_side a {
   display: block;
   position: absolute;
@@ -2197,13 +2198,14 @@ div#choose_your_story.move_down {
   height: 100%;
   z-index: 9999;
 }
-/* line 323, ../scss/app.scss */
+/* line 324, ../scss/app.scss */
 .cys_side.cys_he_container {
   width: 50%;
   left: 0;
   background-image: url("../img/he_intro.jpg");
+  z-index: 9999;
 }
-/* line 328, ../scss/app.scss */
+/* line 330, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2219,13 +2221,14 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-/* line 335, ../scss/app.scss */
+/* line 337, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
   background-image: url("../img/she_intro.jpg");
+  z-index: 9999;
 }
-/* line 340, ../scss/app.scss */
+/* line 343, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2242,14 +2245,14 @@ div#choose_your_story.move_down {
   z-index: 99;
 }
 
-/* line 350, ../scss/app.scss */
+/* line 353, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-/* line 358, ../scss/app.scss */
+/* line 361, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2263,7 +2266,7 @@ div#choose_your_story.move_down {
   -webkit-transition: top 1s ease-in-out;
   transition: top 1s ease-in-out;
 }
-/* line 368, ../scss/app.scss */
+/* line 371, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2275,12 +2278,16 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 376, ../scss/app.scss */
+/* line 379, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
+/* line 382, ../scss/app.scss */
+.header_transform .cys_text_overlay p {
+  display: none;
+}
 
-/* line 381, ../scss/app.scss */
+/* line 388, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2291,14 +2298,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 385, ../scss/app.scss */
+/* line 392, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 392, ../scss/app.scss */
+/* line 399, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2309,14 +2316,26 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 395, ../scss/app.scss */
+/* line 402, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 401, ../scss/app.scss */
+/* line 408, ../scss/app.scss */
+.cys_side.header_transform.cys_he_container:before {
+  content: "";
+  position: absolute;
+  background: #4487c7;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+/* line 412, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2329,11 +2348,11 @@ div#choose_your_story.move_down {
 }
 
 /*=== Flexslider ===*/
-/* line 409, ../scss/app.scss */
+/* line 420, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 413, ../scss/app.scss */
+/* line 424, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2343,7 +2362,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 422, ../scss/app.scss */
+/* line 433, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
