--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1880,14 +1880,32 @@ select {
   }
 }
 /*======================================
-HEADER
+FONTS
 ======================================*/
 /* line 53, ../scss/app.scss */
+p, h1, h2, h3 {
+  font-family: "proxima-nova",sans-serif;
+}
+
+/* line 58, ../scss/app.scss */
+p {
+  font-weight: 400;
+}
+
+/* line 62, ../scss/app.scss */
+h1, h2, h3 {
+  font-weight: 700;
+}
+
+/*======================================
+HEADER
+======================================*/
+/* line 70, ../scss/app.scss */
 #choose_your_story {
   z-index: 9999;
 }
 
-/* line 57, ../scss/app.scss */
+/* line 74, ../scss/app.scss */
 .header {
   display: block;
   position: fixed;
@@ -1897,7 +1915,7 @@ HEADER
   background-color: #fff;
 }
 
-/* line 68, ../scss/app.scss */
+/* line 85, ../scss/app.scss */
 .he_toggled .she_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1905,7 +1923,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 73, ../scss/app.scss */
+/* line 90, ../scss/app.scss */
 .he_toggled .main_screen_container {
   background-color: rgba(68, 135, 199, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1914,7 +1932,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 82, ../scss/app.scss */
+/* line 99, ../scss/app.scss */
 .she_toggled .he_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1922,7 +1940,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 87, ../scss/app.scss */
+/* line 104, ../scss/app.scss */
 .she_toggled .main_screen_container {
   background-color: rgba(235, 93, 75, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1931,7 +1949,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 94, ../scss/app.scss */
+/* line 111, ../scss/app.scss */
 .header h1 {
   color: #ffffff;
   text-transform: uppercase;
@@ -1939,21 +1957,21 @@ HEADER
   font-size: 30px;
 }
 
-/* line 101, ../scss/app.scss */
+/* line 118, ../scss/app.scss */
 .he_said_header {
   text-align: right;
   background: #4487c7;
   cursor: pointer;
 }
 
-/* line 107, ../scss/app.scss */
+/* line 124, ../scss/app.scss */
 .she_said_header {
   text-align: left;
   background: #eb5d4b;
   cursor: pointer;
 }
 
-/* line 113, ../scss/app.scss */
+/* line 130, ../scss/app.scss */
 .he_said_header, .she_said_header {
   display: block;
   width: 50%;
@@ -1964,7 +1982,7 @@ HEADER
 /*======================================
 MAIN SCREEN
 ======================================*/
-/* line 124, ../scss/app.scss */
+/* line 141, ../scss/app.scss */
 .main_screen_container {
   display: block;
   box-sizing: border-box;
@@ -1978,7 +1996,7 @@ MAIN SCREEN
   z-index: -100;
 }
 
-/* line 133, ../scss/app.scss */
+/* line 150, ../scss/app.scss */
 .main_screen_container.show {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -1989,7 +2007,7 @@ MAIN SCREEN
 COMPONENTS
 ======================================*/
 /*=== Buttons ===*/
-/* line 145, ../scss/app.scss */
+/* line 162, ../scss/app.scss */
 a.primary_button {
   display: inline-block;
   background-color: #000;
@@ -1999,7 +2017,7 @@ a.primary_button {
   text-transform: uppercase;
 }
 
-/* line 154, ../scss/app.scss */
+/* line 171, ../scss/app.scss */
 .hide {
   display: none;
 }
@@ -2007,7 +2025,7 @@ a.primary_button {
 /*======================================
 HEADER
 ======================================*/
-/* line 162, ../scss/app.scss */
+/* line 179, ../scss/app.scss */
 .header_container {
   display: block;
   position: fixed;
@@ -2023,21 +2041,21 @@ HEADER
   -webkit-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
 }
-/* line 173, ../scss/app.scss */
+/* line 190, ../scss/app.scss */
 .header_container.fadeOut {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   z-index: 99;
 }
-/* line 178, ../scss/app.scss */
-.header_container h1 {
+/* line 195, ../scss/app.scss */
+.header_container h1, .header_container h2 {
   color: #f5f6f7;
 }
 
 /*======================================
 CHOOSE YOUR ACT
 ======================================*/
-/* line 187, ../scss/app.scss */
+/* line 204, ../scss/app.scss */
 video#cya_bgvid {
   position: fixed;
   top: 50%;
@@ -2053,28 +2071,30 @@ video#cya_bgvid {
   background-size: cover;
 }
 
-/* line 202, ../scss/app.scss */
+/* line 219, ../scss/app.scss */
 .intro_container {
   display: block;
   position: absolute;
-  top: 30%;
+  top: 20%;
   width: 100%;
   text-align: center;
   padding: 0px 200px;
   z-index: 99;
+  margin-left: 10px;
 }
-/* line 211, ../scss/app.scss */
+/* line 229, ../scss/app.scss */
 .intro_container h1 {
   color: #f5f6f7;
+  font-size: 50px;
 }
-/* line 215, ../scss/app.scss */
+/* line 234, ../scss/app.scss */
 .intro_container p {
   font-size: 30px;
   line-height: 38px;
   color: #f5f6f7;
 }
 
-/* line 222, ../scss/app.scss */
+/* line 241, ../scss/app.scss */
 .intros {
   position: fixed;
   top: 0;
@@ -2082,14 +2102,14 @@ video#cya_bgvid {
   display: block;
   height: 100%;
 }
-/* line 229, ../scss/app.scss */
+/* line 248, ../scss/app.scss */
 .intros .intro_left {
   width: 50%;
   left: 0;
   height: 100%;
   position: absolute;
 }
-/* line 235, ../scss/app.scss */
+/* line 254, ../scss/app.scss */
 .intros .intro_left:before {
   content: "";
   position: absolute;
@@ -2100,14 +2120,14 @@ video#cya_bgvid {
   height: 100%;
   display: block;
 }
-/* line 240, ../scss/app.scss */
+/* line 259, ../scss/app.scss */
 .intros .intro_right {
   width: 50%;
   right: 0;
   height: 100%;
   position: absolute;
 }
-/* line 246, ../scss/app.scss */
+/* line 265, ../scss/app.scss */
 .intros .intro_right:before {
   content: "";
   position: absolute;
@@ -2122,7 +2142,7 @@ video#cya_bgvid {
 /*======================================
 INTRO VIDEO
 ======================================*/
-/* line 256, ../scss/app.scss */
+/* line 275, ../scss/app.scss */
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -2137,12 +2157,12 @@ INTRO VIDEO
   transition: all 1s ease-in-out;
 }
 
-/* line 267, ../scss/app.scss */
+/* line 286, ../scss/app.scss */
 .fullscreen-bg.move_down_vid {
   bottom: -100%;
 }
 
-/* line 271, ../scss/app.scss */
+/* line 290, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2154,7 +2174,7 @@ INTRO VIDEO
 /*======================================
 CHOOSE YOUR STORY
 ======================================*/
-/* line 283, ../scss/app.scss */
+/* line 302, ../scss/app.scss */
 div#choose_your_story {
   position: absolute;
   display: block;
@@ -2166,17 +2186,17 @@ div#choose_your_story {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 291, ../scss/app.scss */
+/* line 310, ../scss/app.scss */
 div#choose_your_story.header_transform {
   height: 10%;
 }
 
-/* line 296, ../scss/app.scss */
+/* line 315, ../scss/app.scss */
 div#choose_your_story.move_down {
   transform: translateY(0%);
 }
 
-/* line 300, ../scss/app.scss */
+/* line 319, ../scss/app.scss */
 .cys_split_container {
   position: relative;
   overflow-x: hidden;
@@ -2184,7 +2204,7 @@ div#choose_your_story.move_down {
   width: 100%;
 }
 
-/* line 307, ../scss/app.scss */
+/* line 326, ../scss/app.scss */
 .cys_side {
   height: 100%;
   position: fixed;
@@ -2192,7 +2212,7 @@ div#choose_your_story.move_down {
   background-size: cover;
   background-position: 60% 0;
 }
-/* line 314, ../scss/app.scss */
+/* line 333, ../scss/app.scss */
 .cys_side a {
   display: block;
   position: absolute;
@@ -2202,14 +2222,14 @@ div#choose_your_story.move_down {
   height: 100%;
   z-index: 9999;
 }
-/* line 324, ../scss/app.scss */
+/* line 343, ../scss/app.scss */
 .cys_side.cys_he_container {
   width: 50%;
   left: 0;
   background-image: url("../img/he_intro.jpg");
   z-index: 9999;
 }
-/* line 330, ../scss/app.scss */
+/* line 349, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2225,14 +2245,14 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-/* line 337, ../scss/app.scss */
+/* line 356, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
   background-image: url("../img/she_intro.jpg");
   z-index: 9999;
 }
-/* line 343, ../scss/app.scss */
+/* line 362, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2249,14 +2269,14 @@ div#choose_your_story.move_down {
   z-index: 99;
 }
 
-/* line 353, ../scss/app.scss */
+/* line 372, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-/* line 361, ../scss/app.scss */
+/* line 380, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2270,7 +2290,7 @@ div#choose_your_story.move_down {
   -webkit-transition: top 1s ease-in-out;
   transition: top 1s ease-in-out;
 }
-/* line 371, ../scss/app.scss */
+/* line 390, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2282,16 +2302,16 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 379, ../scss/app.scss */
+/* line 398, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
-/* line 382, ../scss/app.scss */
+/* line 401, ../scss/app.scss */
 .header_transform .cys_text_overlay p {
   display: none;
 }
 
-/* line 388, ../scss/app.scss */
+/* line 407, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2302,14 +2322,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 392, ../scss/app.scss */
+/* line 411, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 399, ../scss/app.scss */
+/* line 418, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2320,14 +2340,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 402, ../scss/app.scss */
+/* line 421, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 408, ../scss/app.scss */
+/* line 427, ../scss/app.scss */
 .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2337,9 +2357,13 @@ div#choose_your_story.move_down {
   width: 100%;
   height: 100%;
   display: block;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 412, ../scss/app.scss */
+/* line 432, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2351,7 +2375,7 @@ div#choose_your_story.move_down {
   display: block;
 }
 
-/* line 418, ../scss/app.scss */
+/* line 438, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2362,7 +2386,7 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 422, ../scss/app.scss */
+/* line 442, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2375,7 +2399,7 @@ div#choose_your_story.move_down {
 }
 
 /*=== Animate Header ===*/
-/* line 431, ../scss/app.scss */
+/* line 451, ../scss/app.scss */
 .cys_she_container.animated:before {
   -webkit-animation: header_color_notification 1s infinite ease-in-out;
   -moz-animation: header_color_notification 1s infinite ease-in-out;
@@ -2428,11 +2452,11 @@ div#choose_your_story.move_down {
   }
 }
 /*=== Flexslider ===*/
-/* line 445, ../scss/app.scss */
+/* line 465, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 449, ../scss/app.scss */
+/* line 469, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2442,7 +2466,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 458, ../scss/app.scss */
+/* line 478, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
