--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -47,6 +47,23 @@
 //   "foundation/components/visibility";
 
 /*======================================
+FONTS
+======================================*/
+
+p, h1, h2, h3 {
+  font-family: "proxima-nova",sans-serif;
+}
+
+
+p {
+	font-weight: 400;
+}
+
+h1, h2, h3 {
+	font-weight: 700;
+}
+
+/*======================================
 HEADER
 ======================================*/
 
@@ -175,7 +192,7 @@ HEADER
 		z-index: 99;
 	}
 
-    h1 {
+    h1, h2 {
     	color: $white;
     }
 }
@@ -202,14 +219,16 @@ video#cya_bgvid {
 .intro_container {
     display: block;
     position: absolute;
-    top: 30%;
+    top: 20%;
     width: 100%;
     text-align: center;
     padding: 0px 200px;
     z-index: 99;
+    margin-left: 10px;
 
     h1 {
     	color: $white;
+    	font-size: 50px;
     }
 
     p {
@@ -407,6 +426,7 @@ div#choose_your_story.move_down {
 
 .cys_side.header_transform.cys_he_container:before {
 	@include overlay(rgba(68,135,199,1));
+	@include transition (all 1s ease-in-out);
 }
 
 .cys_side.header_transform.cys_she_container:before {
