Adjusting hover r transitions on the header and updating cursor hover to pointer on the he/she decision.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1883,16 +1883,16 @@ select {
 FONTS
 ======================================*/
 /* line 53, ../scss/app.scss */
-p, h1, h2, h3 {
+body, p, h1, h2, h3 {
   font-family: "proxima-nova",sans-serif;
 }
 
-/* line 58, ../scss/app.scss */
+/* line 57, ../scss/app.scss */
 p {
   font-weight: 400;
 }
 
-/* line 62, ../scss/app.scss */
+/* line 61, ../scss/app.scss */
 h1, h2, h3 {
   font-weight: 700;
 }
@@ -1900,12 +1900,12 @@ h1, h2, h3 {
 /*======================================
 HEADER
 ======================================*/
-/* line 70, ../scss/app.scss */
+/* line 69, ../scss/app.scss */
 #choose_your_story {
   z-index: 9999;
 }
 
-/* line 74, ../scss/app.scss */
+/* line 73, ../scss/app.scss */
 .header {
   display: block;
   position: fixed;
@@ -1915,7 +1915,7 @@ HEADER
   background-color: #fff;
 }
 
-/* line 85, ../scss/app.scss */
+/* line 84, ../scss/app.scss */
 .he_toggled .she_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1923,7 +1923,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 90, ../scss/app.scss */
+/* line 89, ../scss/app.scss */
 .he_toggled .main_screen_container {
   background-color: rgba(68, 135, 199, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1932,7 +1932,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 99, ../scss/app.scss */
+/* line 98, ../scss/app.scss */
 .she_toggled .he_said_header {
   opacity: .5;
   -moz-transition: all 0.5s ease-in-out;
@@ -1940,7 +1940,7 @@ HEADER
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 104, ../scss/app.scss */
+/* line 103, ../scss/app.scss */
 .she_toggled .main_screen_container {
   background-color: rgba(235, 93, 75, 0.5);
   -moz-transition: all 0.5s ease-in-out;
@@ -1949,7 +1949,7 @@ HEADER
   transition: all 0.5s ease-in-out;
 }
 
-/* line 111, ../scss/app.scss */
+/* line 110, ../scss/app.scss */
 .header h1 {
   color: #ffffff;
   text-transform: uppercase;
@@ -1957,21 +1957,21 @@ HEADER
   font-size: 30px;
 }
 
-/* line 118, ../scss/app.scss */
+/* line 117, ../scss/app.scss */
 .he_said_header {
   text-align: right;
   background: #4487c7;
   cursor: pointer;
 }
 
-/* line 124, ../scss/app.scss */
+/* line 123, ../scss/app.scss */
 .she_said_header {
   text-align: left;
   background: #eb5d4b;
   cursor: pointer;
 }
 
-/* line 130, ../scss/app.scss */
+/* line 129, ../scss/app.scss */
 .he_said_header, .she_said_header {
   display: block;
   width: 50%;
@@ -1982,7 +1982,7 @@ HEADER
 /*======================================
 MAIN SCREEN
 ======================================*/
-/* line 141, ../scss/app.scss */
+/* line 140, ../scss/app.scss */
 .main_screen_container {
   display: block;
   box-sizing: border-box;
@@ -1996,7 +1996,7 @@ MAIN SCREEN
   z-index: -100;
 }
 
-/* line 150, ../scss/app.scss */
+/* line 149, ../scss/app.scss */
 .main_screen_container.show {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -2007,7 +2007,7 @@ MAIN SCREEN
 COMPONENTS
 ======================================*/
 /*=== Buttons ===*/
-/* line 162, ../scss/app.scss */
+/* line 161, ../scss/app.scss */
 a.primary_button {
   display: inline-block;
   background-color: #000;
@@ -2017,7 +2017,7 @@ a.primary_button {
   text-transform: uppercase;
 }
 
-/* line 171, ../scss/app.scss */
+/* line 170, ../scss/app.scss */
 .hide {
   display: none;
 }
@@ -2025,7 +2025,7 @@ a.primary_button {
 /*======================================
 HEADER
 ======================================*/
-/* line 179, ../scss/app.scss */
+/* line 178, ../scss/app.scss */
 .header_container {
   display: block;
   position: fixed;
@@ -2034,6 +2034,7 @@ HEADER
   text-align: center;
   width: 100%;
   background-color: transparent;
+  margin-left: 6px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -moz-transition: opacity 1s ease-in-out;
@@ -2113,7 +2114,7 @@ video#cya_bgvid {
 .intros .intro_left:before {
   content: "";
   position: absolute;
-  background: rgba(68, 135, 199, 0.4);
+  background: rgba(68, 135, 199, 0.6);
   top: 0;
   bottom: 0;
   width: 100%;
@@ -2131,7 +2132,7 @@ video#cya_bgvid {
 .intros .intro_right:before {
   content: "";
   position: absolute;
-  background: rgba(235, 93, 75, 0.4);
+  background: rgba(235, 93, 75, 0.6);
   top: 0;
   bottom: 0;
   width: 100%;
@@ -2228,8 +2229,9 @@ div#choose_your_story.move_down {
   left: 0;
   background-image: url("../img/he_intro.jpg");
   z-index: 9999;
+  cursor: pointer;
 }
-/* line 349, ../scss/app.scss */
+/* line 350, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2245,14 +2247,15 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-/* line 356, ../scss/app.scss */
+/* line 357, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
   background-image: url("../img/she_intro.jpg");
   z-index: 9999;
+  cursor: pointer;
 }
-/* line 362, ../scss/app.scss */
+/* line 364, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2269,14 +2272,14 @@ div#choose_your_story.move_down {
   z-index: 99;
 }
 
-/* line 372, ../scss/app.scss */
+/* line 374, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-/* line 380, ../scss/app.scss */
+/* line 382, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2290,7 +2293,7 @@ div#choose_your_story.move_down {
   -webkit-transition: top 1s ease-in-out;
   transition: top 1s ease-in-out;
 }
-/* line 390, ../scss/app.scss */
+/* line 392, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2302,16 +2305,16 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 398, ../scss/app.scss */
+/* line 400, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
-/* line 401, ../scss/app.scss */
+/* line 403, ../scss/app.scss */
 .header_transform .cys_text_overlay p {
   display: none;
 }
 
-/* line 407, ../scss/app.scss */
+/* line 409, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2322,14 +2325,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 411, ../scss/app.scss */
+/* line 413, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 418, ../scss/app.scss */
+/* line 420, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2340,14 +2343,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 421, ../scss/app.scss */
+/* line 423, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 427, ../scss/app.scss */
+/* line 429, ../scss/app.scss */
 .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2363,7 +2366,7 @@ div#choose_your_story.move_down {
   transition: all 1s ease-in-out;
 }
 
-/* line 432, ../scss/app.scss */
+/* line 434, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2375,7 +2378,7 @@ div#choose_your_story.move_down {
   display: block;
 }
 
-/* line 438, ../scss/app.scss */
+/* line 440, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2386,7 +2389,7 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 442, ../scss/app.scss */
+/* line 444, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2399,7 +2402,7 @@ div#choose_your_story.move_down {
 }
 
 /*=== Animate Header ===*/
-/* line 451, ../scss/app.scss */
+/* line 453, ../scss/app.scss */
 .cys_she_container.animated:before {
   -webkit-animation: header_color_notification 1s infinite ease-in-out;
   -moz-animation: header_color_notification 1s infinite ease-in-out;
@@ -2452,11 +2455,11 @@ div#choose_your_story.move_down {
   }
 }
 /*=== Flexslider ===*/
-/* line 465, ../scss/app.scss */
+/* line 467, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 469, ../scss/app.scss */
+/* line 471, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2466,7 +2469,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 478, ../scss/app.scss */
+/* line 480, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
