--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -212,7 +212,6 @@ video#cya_bgvid {
 	z-index: -100;
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
-	background: url(polina.jpg) no-repeat;
 	background-size: cover;
 }
 
@@ -285,6 +284,34 @@ INTRO VIDEO
 
 .fullscreen-bg.move_down_vid {
     bottom: -100%;
+}
+
+#bgvid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/*======================================
+SUMMARY VIDEO
+======================================*/
+
+.summary_video {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+    @include transition(all 1s ease-in-out);
+    @include transparent();
+}
+
+.summary_video.show {
+    @include opaque();
 }
 
 #bgvid {
