--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2333,6 +2333,16 @@ div#choose_your_story.move_down {
   transition: top 1s ease-in-out;
 }
 /* line 419, ../scss/app.scss */
+.cys_text_overlay img {
+  display: inline-block;
+  width: auto;
+  height: auto;
+}
+/* line 425, ../scss/app.scss */
+.cys_text_overlay h2 {
+  display: inline-block;
+}
+/* line 429, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2344,16 +2354,16 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 427, ../scss/app.scss */
+/* line 437, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
-/* line 430, ../scss/app.scss */
+/* line 440, ../scss/app.scss */
 .header_transform .cys_text_overlay p {
   display: none;
 }
 
-/* line 436, ../scss/app.scss */
+/* line 446, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2364,14 +2374,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 440, ../scss/app.scss */
+/* line 450, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 447, ../scss/app.scss */
+/* line 457, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2382,14 +2392,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 450, ../scss/app.scss */
+/* line 460, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 456, ../scss/app.scss */
+/* line 466, ../scss/app.scss */
 .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2405,11 +2415,11 @@ div#choose_your_story.move_down {
   transition: all 1s ease-in-out;
 }
 
-/* line 461, ../scss/app.scss */
+/* line 471, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
-  background: #cccccc;
+  background: #929292;
   top: 0;
   bottom: 0;
   width: 100%;
@@ -2417,18 +2427,18 @@ div#choose_your_story.move_down {
   display: block;
 }
 
-/* line 467, ../scss/app.scss */
+/* line 477, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
-  background: #cccccc;
+  background: #929292;
   top: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
   display: block;
 }
-/* line 471, ../scss/app.scss */
+/* line 481, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2441,7 +2451,7 @@ div#choose_your_story.move_down {
 }
 
 /*=== Animate Header ===*/
-/* line 480, ../scss/app.scss */
+/* line 490, ../scss/app.scss */
 .cys_she_container.animated:before {
   -webkit-animation: header_color_notification 1s infinite ease-in-out;
   -moz-animation: header_color_notification 1s infinite ease-in-out;
@@ -2454,7 +2464,7 @@ div#choose_your_story.move_down {
     background: #eb5d4b;
   }
   50% {
-    background: #cccccc;
+    background: #929292;
   }
   100% {
     background: #eb5d4b;
@@ -2465,7 +2475,7 @@ div#choose_your_story.move_down {
     background: #eb5d4b;
   }
   50% {
-    background: #cccccc;
+    background: #929292;
   }
   100% {
     background: #eb5d4b;
@@ -2476,7 +2486,7 @@ div#choose_your_story.move_down {
     background: #eb5d4b;
   }
   50% {
-    background: #cccccc;
+    background: #929292;
   }
   100% {
     background: #eb5d4b;
@@ -2487,18 +2497,18 @@ div#choose_your_story.move_down {
     background: #eb5d4b;
   }
   50% {
-    background: #cccccc;
+    background: #929292;
   }
   100% {
     background: #eb5d4b;
   }
 }
 /*=== Flexslider ===*/
-/* line 494, ../scss/app.scss */
+/* line 504, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 498, ../scss/app.scss */
+/* line 508, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2508,7 +2518,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 507, ../scss/app.scss */
+/* line 517, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
