--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2056,12 +2056,13 @@ HEADER
 /* line 195, ../scss/app.scss */
 .header_container h1, .header_container h2 {
   color: #f5f6f7;
+  margin-bottom: 50px;
 }
 
 /*======================================
 CHOOSE YOUR ACT
 ======================================*/
-/* line 204, ../scss/app.scss */
+/* line 205, ../scss/app.scss */
 video#cya_bgvid {
   position: fixed;
   top: 50%;
@@ -2076,7 +2077,7 @@ video#cya_bgvid {
   background-size: cover;
 }
 
-/* line 218, ../scss/app.scss */
+/* line 219, ../scss/app.scss */
 .intro_container {
   display: block;
   position: absolute;
@@ -2087,19 +2088,19 @@ video#cya_bgvid {
   z-index: 99;
   margin-left: 10px;
 }
-/* line 228, ../scss/app.scss */
+/* line 229, ../scss/app.scss */
 .intro_container h1 {
   color: #f5f6f7;
   font-size: 50px;
 }
-/* line 233, ../scss/app.scss */
+/* line 234, ../scss/app.scss */
 .intro_container p {
   font-size: 30px;
   line-height: 38px;
   color: #f5f6f7;
 }
 
-/* line 240, ../scss/app.scss */
+/* line 241, ../scss/app.scss */
 .intros {
   position: fixed;
   top: 0;
@@ -2107,14 +2108,14 @@ video#cya_bgvid {
   display: block;
   height: 100%;
 }
-/* line 247, ../scss/app.scss */
+/* line 248, ../scss/app.scss */
 .intros .intro_left {
   width: 50%;
   left: 0;
   height: 100%;
   position: absolute;
 }
-/* line 253, ../scss/app.scss */
+/* line 254, ../scss/app.scss */
 .intros .intro_left:before {
   content: "";
   position: absolute;
@@ -2125,14 +2126,14 @@ video#cya_bgvid {
   height: 100%;
   display: block;
 }
-/* line 258, ../scss/app.scss */
+/* line 259, ../scss/app.scss */
 .intros .intro_right {
   width: 50%;
   right: 0;
   height: 100%;
   position: absolute;
 }
-/* line 264, ../scss/app.scss */
+/* line 265, ../scss/app.scss */
 .intros .intro_right:before {
   content: "";
   position: absolute;
@@ -2147,7 +2148,7 @@ video#cya_bgvid {
 /*======================================
 INTRO VIDEO
 ======================================*/
-/* line 274, ../scss/app.scss */
+/* line 275, ../scss/app.scss */
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -2162,12 +2163,12 @@ INTRO VIDEO
   transition: all 1s ease-in-out;
 }
 
-/* line 285, ../scss/app.scss */
+/* line 286, ../scss/app.scss */
 .fullscreen-bg.move_down_vid {
   bottom: -100%;
 }
 
-/* line 289, ../scss/app.scss */
+/* line 290, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2179,7 +2180,7 @@ INTRO VIDEO
 /*======================================
 SUMMARY VIDEO
 ======================================*/
-/* line 301, ../scss/app.scss */
+/* line 302, ../scss/app.scss */
 .summary_video {
   position: fixed;
   top: 0;
@@ -2196,13 +2197,13 @@ SUMMARY VIDEO
   opacity: 0;
 }
 
-/* line 313, ../scss/app.scss */
+/* line 314, ../scss/app.scss */
 .summary_video.show {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 317, ../scss/app.scss */
+/* line 318, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2214,7 +2215,7 @@ SUMMARY VIDEO
 /*======================================
 CHOOSE YOUR STORY
 ======================================*/
-/* line 329, ../scss/app.scss */
+/* line 330, ../scss/app.scss */
 div#choose_your_story {
   position: absolute;
   display: block;
@@ -2226,17 +2227,17 @@ div#choose_your_story {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 337, ../scss/app.scss */
+/* line 338, ../scss/app.scss */
 div#choose_your_story.header_transform {
   height: 10%;
 }
 
-/* line 342, ../scss/app.scss */
+/* line 343, ../scss/app.scss */
 div#choose_your_story.move_down {
   transform: translateY(0%);
 }
 
-/* line 346, ../scss/app.scss */
+/* line 347, ../scss/app.scss */
 .cys_split_container {
   position: relative;
   overflow-x: hidden;
@@ -2244,7 +2245,7 @@ div#choose_your_story.move_down {
   width: 100%;
 }
 
-/* line 353, ../scss/app.scss */
+/* line 354, ../scss/app.scss */
 .cys_side {
   height: 100%;
   position: fixed;
@@ -2252,7 +2253,7 @@ div#choose_your_story.move_down {
   background-size: cover;
   background-position: 60% 0;
 }
-/* line 360, ../scss/app.scss */
+/* line 361, ../scss/app.scss */
 .cys_side a {
   display: block;
   position: absolute;
@@ -2262,7 +2263,7 @@ div#choose_your_story.move_down {
   height: 100%;
   z-index: 9999;
 }
-/* line 370, ../scss/app.scss */
+/* line 371, ../scss/app.scss */
 .cys_side.cys_he_container {
   width: 50%;
   left: 0;
@@ -2270,7 +2271,7 @@ div#choose_your_story.move_down {
   z-index: 9999;
   cursor: pointer;
 }
-/* line 377, ../scss/app.scss */
+/* line 378, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2286,7 +2287,7 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-/* line 384, ../scss/app.scss */
+/* line 385, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
@@ -2294,7 +2295,7 @@ div#choose_your_story.move_down {
   z-index: 9999;
   cursor: pointer;
 }
-/* line 391, ../scss/app.scss */
+/* line 392, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2311,14 +2312,14 @@ div#choose_your_story.move_down {
   z-index: 99;
 }
 
-/* line 401, ../scss/app.scss */
+/* line 402, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-/* line 409, ../scss/app.scss */
+/* line 410, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2332,17 +2333,17 @@ div#choose_your_story.move_down {
   -webkit-transition: top 1s ease-in-out;
   transition: top 1s ease-in-out;
 }
-/* line 419, ../scss/app.scss */
+/* line 420, ../scss/app.scss */
 .cys_text_overlay img {
   display: inline-block;
   width: auto;
   height: auto;
 }
-/* line 425, ../scss/app.scss */
+/* line 426, ../scss/app.scss */
 .cys_text_overlay h2 {
   display: inline-block;
 }
-/* line 429, ../scss/app.scss */
+/* line 430, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2354,16 +2355,16 @@ div#choose_your_story.move_down {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 437, ../scss/app.scss */
+/* line 438, ../scss/app.scss */
 .header_transform .cys_text_overlay {
   top: 0%;
 }
-/* line 440, ../scss/app.scss */
+/* line 441, ../scss/app.scss */
 .header_transform .cys_text_overlay p {
   display: none;
 }
 
-/* line 446, ../scss/app.scss */
+/* line 447, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2374,14 +2375,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 450, ../scss/app.scss */
+/* line 451, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 457, ../scss/app.scss */
+/* line 458, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2392,14 +2393,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 460, ../scss/app.scss */
+/* line 461, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 466, ../scss/app.scss */
+/* line 467, ../scss/app.scss */
 .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2415,7 +2416,7 @@ div#choose_your_story.move_down {
   transition: all 1s ease-in-out;
 }
 
-/* line 471, ../scss/app.scss */
+/* line 472, ../scss/app.scss */
 .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2427,7 +2428,7 @@ div#choose_your_story.move_down {
   display: block;
 }
 
-/* line 477, ../scss/app.scss */
+/* line 478, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2438,7 +2439,7 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 481, ../scss/app.scss */
+/* line 482, ../scss/app.scss */
 .she_toggled .cys_side.header_transform.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2451,7 +2452,7 @@ div#choose_your_story.move_down {
 }
 
 /*=== Animate Header ===*/
-/* line 490, ../scss/app.scss */
+/* line 491, ../scss/app.scss */
 .cys_she_container.animated:before {
   -webkit-animation: header_color_notification 1s infinite ease-in-out;
   -moz-animation: header_color_notification 1s infinite ease-in-out;
@@ -2504,11 +2505,11 @@ div#choose_your_story.move_down {
   }
 }
 /*=== Flexslider ===*/
-/* line 504, ../scss/app.scss */
+/* line 505, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 508, ../scss/app.scss */
+/* line 509, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2518,7 +2519,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 517, ../scss/app.scss */
+/* line 518, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
