--- a/app/scss/_messages.scss
+++ b/app/scss/_messages.scss
@@ -99,6 +99,7 @@ $msg-color: #1f96fb;
 
 .avatar {
   transform: translateY(50%);
+  margin-bottom: 60px;
   display: inline-block;
   text-align: center;
   img {
