--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -190,6 +190,7 @@ HEADER
     &.fadeOut {
 		@include transparent();
 		z-index: 99;
+		height: 0;
 	}
 
     h1, h2 {
@@ -313,6 +314,7 @@ SUMMARY VIDEO
 
 .summary_video.show {
     @include opaque();
+    z-index: 99999;
 }
 
 #bgvid {
